<resources>
    <string name="app_name">PawtyTime</string>
    <string name="tagline">Let\'s get this pawty started!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!-- Home Screen Stuff -->
    <!-- Content descriptions -->
    <string name="cd_profile">Profile picture</string>
    <string name="cd_notifications">Notifications icon</string>
    <string name="cd_inbox">Inbox icon</string>
    <string name="cd_info_icon">Information icon</string>

    <!-- UI hints & labels -->
    <string name="hint_search">Search</string>
    <string name="hint_search_zip">Search Zip Code</string>
    <string name="tip_profile_settings">Tap your photo to open Profile &amp; Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_tab">Home</string>
    <string name="events_tab">Events</string>
    <string name="map_tab">Map</string>
    <string name="shop_tab">Shop</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="example_profile">Loading...</string>
    <string name="account_settings">Account Settings</string>
    <string name="edit">Edit</string>
    <string name="view">View</string>
    <string name="calendar">Your Calendar</string>
    <string name="dropdownIcon">Open Dropdown</string>
    <string name="pet_profile_dropdown">Pet Profile(s)</string>
    <string name="profile_dropdown">Profile</string>
    <string name="welcome_title">Welcome to PawtyTime!\nPlease log in or create an\naccount to get started!</string>
    <string name="continue_google">Log in with Google</string>
    <string name="continue_facebook">Log in with Facebook</string>
    <string name="login_with_email">Log in with Email:</string>
    <string name="hint_email">email or username</string>
    <string name="hint_password">password</string>
    <string name="login">Log In</string>
    <string name="or">Or</string>
    <string name="create_account">Create Account</string>
    <!-- Added Logout Button string -->
    <string name="logout">Logout</string>
    <string name="create_caption">Write a Caption</string>


    <string name="pawty_people_title">Pawty People</string>
    <string name="hint_first_name">Enter First Name *</string>
    <string name="hint_last_name">Enter Last Name *</string>
    <string name="hint_username">Enter Username *</string>
    <string name="hint_password_create">Enter Password *</string>
    <string name="hint_valid_email">Enter Valid Email Address *</string>
    <string name="hint_phone">Enter Phone Number *</string>
    <string name="hint_location">Enter City, State, Zip *</string>

    <string name="upload_info_header">Enter the following information to get verified</string>
    <string name="btn_upload_profile">Upload Profile Picture</string>
    <string name="btn_upload_id_front">Upload ID (Front)</string>
    <string name="btn_upload_id_back">Upload ID (Back)</string>
    <string name="back">Back</string>
    <string name="next">Next</string>

    <string name="pawty_pets_title">Pawty Pets</string>
    <string name="hint_pet_name">Pet Name *</string>
    <string name="hint_species">Species *</string>
    <string name="hint_breed">Breed *</string>
    <string name="hint_birthdate">Birthdate *</string>
    <string name="hint_weight">Weight (lbs) *</string>
    <string name="hint_sex">Sex *</string>
    <string name="hint_likes">Likes</string>
    <string name="hint_dislikes">Dislikes</string>
    <string name="health_info_header">Health Info *</string>
    <string name="hint_med_conditions">Medical Conditions *</string>
    <string name="hint_medications">Medications *</string>
    <string name="vaccinations_header">Vaccinations *</string>
    <string name="hint_spayed_neutered">Spayed/Neutered *</string>
    <string name="btn_upload_pet_photo">Upload Pet Photo</string>
    <string name="btn_upload_vax">Upload Vaccine Records</string>
    <string name="add_another_pet">Add Another Pet</string>
    <string name="done">Done</string>

    <string name="fb_app_id">836826048730037</string>
    <string name="fb_login_protocol_scheme">fb836826048730037</string>
    <string name="facebook_client_token">6fb4f89c7829187e5aba416ad4c5235d</string>
    <!-- Item Post -->
    <!-- content descriptions -->
    <string name="cd_profile_button">Profile button</string>
    <string name="cd_logo">PawtyTime logo</string>
    <string name="for_you">For You</string>
    <string name="recommended_profiles">Recommended Profiles</string>
    <string name="cd_more">See more</string>
    <string name="cd_avatar">Author avatar</string>
    <string name="cd_post_image">Post image</string>
    <string name="cd_like">Like</string>
    <string name="cd_share">Share</string>
    <string name="cd_save">Save</string>
    <string name="cd_comment">Comment</string>
    <string name="cd_expand_comments">Expand comments</string>
    <string name="like_count_zero">0</string>
    <string name="create_post">Create post</string>
    <string name="cd_like_comment">Like comment</string>


    <!-- UI text -->
    <string name="follow">Follow</string>
    <string name="post_author_placeholder">Rufus</string>
    <string name="post_caption_placeholder">Don’t take your eyes off the ball!</string>
    <string name="like_count_placeholder">37</string>
    <string name="comments_placeholder">Comments</string>
    <string name="sample_name">Rufus</string>
    <string name="sample_miles">2.1 mi</string>
    <string name="breed">Breed</string>
    <string name="age">Age</string>
    <string name="likes">Likes</string>
    <string name="dislikes">Dislikes</string>
    <string name="view_profile_screen">View Profile Screen</string>
    <string name="back_btn">Back</string>
    <string name="more_options_btn">More Options</string>
    <string name="profile_view_pic">profile_view_pic</string>
    <string name="initial_value">0</string>
    <string name="pt_followers">Followers</string>
    <string name="pt_following">Following</string>
    <string name="posts">Posts</string>
    <string name="pt_reposts">Reposts</string>
    <string name="post_image">post_image</string>
    <string name="profile_posts_scroll">profile posts scroll</string>
    <string name="tagged">Tagged</string>
    <string name="view_username">Username:</string>
    <string name="edit_username">username</string>
    <string name="view_first_name">First Name:</string>
    <string name="edit_first_name">firstname</string>
    <string name="view_last_name">Last Name:</string>
    <string name="edit_lastname">lastname</string>
    <string name="view_email">Email:</string>
    <string name="edit_email">email</string>
    <string name="view_password">Password:</string>
    <string name="edit_password">password</string>
    <string name="view_phone_number">Phone Number:</string>
    <string name="edit_phone_number">1234567890</string>
    <string name="view_location">Location:</string>
    <string name="edit_location">location</string>
    <string name="edit_bio">Bio:</string>

    <string name="google_maps_key">AIzaSyAiCbW3p1rt-ASz9IFcw3JgxhsZ2dTs1mU</string>

    <string name="filter_map">Filter map</string>

    <string name="cd_event_pin">Event pin</string>
    <string name="legend_event">Event</string>

    <string name="cd_product_pin">Product pin</string>
    <string name="legend_product">Product</string>

    <string name="cd_services_pin">Services pin</string>
    <string name="legend_services">Services</string>

    <string name="zoom_in">Zoom in</string>
    <string name="zoom_out">Zoom out</string>

    <string name="events_near_you">Events Near You</string>
    <string name="create_event">Create Event</string>
    <string name="interested">Interested</string>
    <string name="going">Going</string>
    <string name="save_event">Save Event</string>
    <string name="select_event_image">Select Event Image</string>
    <string name="edit_event">Edit Event</string>
    <string name="no_events">Ruh-roh! There are no scheduled events near you. Check back soon! 🐾</string>
    <string name="event_address">%1$s, %2$s, %3$s %4$s</string>
    <string name="interested_count">Interested: %1$d</string>
    <string name="going_count">Going: %1$d</string>
    <string name="privacy_public">Privacy: Public</string>
    <string name="privacy_private">Privacy: Private</string>
    <string name="age_group_label">Age Group: %1$s</string>
    <string name="venue_type_label">Venue Type: %1$s</string>
    <string name="offerings_label">Offerings: %1$s</string>
    <string name="details_label">Pawty Details</string>
    <string name="default_host_name">Host</string>
</resources>